Bug 500115 - Auto updates do not work 2
Summary: Auto updates do not work 2
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Notifier (other bugs)
Version First Reported In: 6.3.0
Platform: Fedora RPMs Linux
: NOR major
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-15 09:49 UTC by Rua
Modified: 2025-04-08 16:14 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rua 2025-02-15 09:49:54 UTC
SUMMARY
The same as https://bugs.kde.org/show_bug.cgi?id=447245 . This was marked as fixed in 6.3.0, but I'm now running 6.3.0 and the auto updates still do not get applied.

STEPS TO REPRODUCE
1. Set to update automatically, daily.

OBSERVED RESULT
Updates do not get applied. They remain listed in Discover, even after restarting.

EXPECTED RESULT
Updates get applied, either immediately or via the extra option that appears when shutting down/restarting the computer.

SOFTWARE/OS VERSIONS
Linux: Fedora 41 KDE
KDE Plasma Version: 6.3.0
KDE Frameworks Version: 6.10.0
Qt Version: 6.8.2
Comment 1 Harald Sitter 2025-02-15 16:15:46 UTC
There's probably a bug in the skip logic somewhere. The decision making for whether to apply an update is super convoluted :(
Comment 2 Bug Janitor Service 2025-03-30 23:57:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/1075
Comment 3 Aleix Pol 2025-04-02 22:30:13 UTC
Git commit af919e229d4effdabcc82028d8852fd1b6f72f2e by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 02/04/2025 at 22:23.
Pushed by apol into branch 'master'.

notifier: Improve behaviour of unattended updates

- Also allow updates when there's only security updates (!)
- Don't trigger updates if the system is offline.
- Centralise the unattended update analysis to be consistent

M  +8    -0    notifier/DiscoverNotifier.cpp
M  +2    -0    notifier/DiscoverNotifier.h
M  +10   -11   notifier/UnattendedUpdates.cpp
M  +1    -0    notifier/UnattendedUpdates.h

https://invent.kde.org/plasma/discover/-/commit/af919e229d4effdabcc82028d8852fd1b6f72f2e