notifier: Improve behaviour of unattended updates

- Also allow updates when there's only security updates (!)
- Don't trigger updates if the system is offline.
- Centralise the unattended update analysis to be consistent

BUG: 500115